--- a/client/src/app/shared/components/form-input/form-input.component.scss
+++ b/client/src/app/shared/components/form-input/form-input.component.scss
@@ -6,7 +6,7 @@
 input {
   width: 100%;
   padding: 0.75rem;
-  border: 1px solid #ccc;
+  border: 1px solid #cacaca;
   border-radius: 8px;
   font-size: 16px;
   background: transparent;
@@ -34,7 +34,7 @@ label {
 }
 
 input:focus {
-  border-color: #336b87;
+  border: 2px solid #0171d3 !important;
   outline: none;
   box-shadow: 0 0 5px rgba(63, 81, 181, 0.5);
 }
