--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -15,11 +15,7 @@
       } @else {
         @for (trainingPlan of filteredTrainingPlans; track trainingPlan.id) {
           <div class="training-plan-card-container" [ngClass]="columnClass" cdkDrag>
-            <app-training-plan-card
-              [trainingPlan]="trainingPlan"
-              [columnClass]="columnClass"
-              (changedPlanConstellation)="loadTrainingPlans()"
-            />
+            <app-training-plan-card [trainingPlan]="trainingPlan" [columnClass]="columnClass" />
 
             <app-circular-icon-button [iconSize]="18" cdkDragHandle [icon]="IconName.SLIDERS" />
           </div>
