Allow creation of plan based on existing one

--- a/client/src/app/features/training-plans/training-view/create-training/create-training.component.html
+++ b/client/src/app/features/training-plans/training-view/create-training/create-training.component.html
@@ -1,4 +1,4 @@
-@if (showCreatePlanBasedOnExistingOne()) {
+@if (isExistingPlanMode()) {
   @if (existingPlans().length > 0) {
     <app-floating-label-input
       [label]="'Basisplan wählen'"
